corrected some spacing

--- a/style.css
+++ b/style.css
@@ -18,9 +18,7 @@
         display: block;
         height: 150px;
     }
-    #logo {
-        display: inline-block;
-    }
+
     .logo {
         max-width: 450px;
         margin: 20px;
@@ -41,9 +39,8 @@
     }
     #search {
         display: inline-block;
-        position: relative;
-        bottom: 90px;
-        left: 15px;
+        margin-top: 30px;
+        vertical-align: top;
         padding-top: 20px;
         height: 50px;
         width: 275px;
@@ -89,8 +86,6 @@
     #subnav {
         display: inline-block;
         margin: 35px 0px 0px 50px;
-        position: relative;
-        top: 0px;
         width: 200px;
         text-align: center;
     }
@@ -137,7 +132,6 @@
     }
     .content {
         display: inline-block;
-        position: relative;
         vertical-align: top;
         margin: 10px 30px 0px 10px;
         padding: 0px 50px 0px 50px;
